test/scc/stmt/semantic-errors/047.t
void test()
{
    return 1;
}